--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 </head>
 <body>
     <header>
-        <h1>Congratulation Everyone Kelas 1! Selasa, 17 Desember</h1>
-        <p>You are success to completed this challange.</p>
+        <h1>Congratulation Everyone Kelas 1! Jumat, 17 Januari 2025</h1>
+        <p>You are success to completed this challenge!! </p>
     </header>
 
     <section>
